--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#c0392b">
+    <meta name="description" content="Portal para organizar las partidas de juegos de rol de la asociación Guardianes de Sevilla">
+    <meta name="author" content="Juan D. Jara">
+    <meta name="keywords" content="Guardianes del rol,Rol,Sevilla,Juego de rol,Guardianes,partidas de rol,administracion de partidas de rol,panel de partidas de rol">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -19,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Guardianes</title>
+    <title>Guardianes del Rol</title>
   </head>
   <body>
     <noscript>
